@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # compile py files
-python -m compileall . > /dev/null
-python -m compileall src > /dev/null
+#python -m compileall . > /dev/null
+#python -m compileall src > /dev/null
 
 /usr/bin/python pyfll-installer.py
