@@ -22,7 +22,7 @@ mountpoints = """
 
 
 [ 'text_to_comboBox' ]
-comboBox_mountpoints = """
+comboBox_installtarget = """
 mbr
 partition
 """
