@@ -2,7 +2,7 @@
 
 # Resource object code
 #
-# Created: Mi Apr 23 11:48:06 2008
+# Created: Do Apr 24 12:51:20 2008
 #      by: The Resource Compiler for PyQt (Qt v4.3.4)
 #
 # WARNING! All changes made in this file will be lost!
