@@ -859,7 +859,7 @@ p, li { white-space: pre-wrap; }
          <x>2</x>
          <y>2</y>
          <width>615</width>
-         <height>394</height>
+         <height>403</height>
         </rect>
        </property>
        <layout class="QGridLayout" >
@@ -941,7 +941,7 @@ p, li { white-space: pre-wrap; }
          <x>2</x>
          <y>2</y>
          <width>615</width>
-         <height>394</height>
+         <height>403</height>
         </rect>
        </property>
        <layout class="QGridLayout" >
@@ -1208,7 +1208,7 @@ p, li { white-space: pre-wrap; }
          <x>2</x>
          <y>2</y>
          <width>615</width>
-         <height>394</height>
+         <height>403</height>
         </rect>
        </property>
        <layout class="QGridLayout" >
@@ -1302,7 +1302,7 @@ p, li { white-space: pre-wrap; }
            </spacer>
           </item>
           <item row="1" column="1" >
-           <widget class="QComboBox" name="comboBox_mountpoints" >
+           <widget class="QComboBox" name="comboBox_installtarget" >
             <property name="font" >
              <font>
               <pointsize>10</pointsize>
