@@ -23,5 +23,6 @@ pyfll-installer (001-1) unstable; urgency=low
   * changed to subprocess
   * changed to subprocess in callbacks.py 
   * main part striped (segmentation fault) 
+  * add hd devices to comboBox_installplace 
 
- -- Horst Tritremmel <hjt@sidux.com>  Thu, 24 Apr 2008 11:33:36 +0200
+ -- Horst Tritremmel <hjt@sidux.com>  Thu, 24 Apr 2008 12:47:08 +0200
